fix: hid overflow

--- a/client/src/scss/main.scss
+++ b/client/src/scss/main.scss
@@ -15,6 +15,7 @@ body {
   background-color: #29ca77;
   background-image: linear-gradient(90deg, rgba(0, 0, 0, 0.15) 2%, rgba(0, 0, 0, 0) 5%), linear-gradient(0deg, rgba(0, 0, 0, 0.15) 2%, rgba(0, 0, 0, 0) 5%);
   background-size: 20px 20px;
+  overflow: hidden;
 }
 
 #game-over-screen {
@@ -150,7 +151,7 @@ body {
 }
 
 #canvas {
-    z-index: -1;
+    z-index: 0;
     position: absolute;
     top: 0;
     left: 0;
@@ -191,27 +192,47 @@ body {
     border-radius: 5px;
 }
 
-.equipped-petal-slot>.petal {
+.dragging-petal {
+    position: absolute;
+    border-style: solid;
+    border-width: 5px;
+    border-radius: 5px;
+    background: $none_bg;
+    border-color: $none_bd;
+    width: 70px;
+    height: 70px;
+}
+
+.dragging-petal>.petal {
+    position: relative;
+    top: -5px;  
+    left: -5px;
+    cursor: pointer;
+    border-width: 5px;
+}
+
+.petal-slot>.petal {
     position: relative;
     top: -4px;
     left: -4px;
+    cursor: pointer;
+    pointer-events: all;
 }
 
-.equipped-petals-row>.equipped-petal-slot{
+.equipped-petals-row>.petal-slot{
     --x: 12px;
     width: 50px;
     height: 50px;
 }
 
-.preparation-petals-row>.equipped-petal-slot{
+.preparation-petals-row>.petal-slot{
     --x: 8px;
     width: 35px;
     height: 35px;
 }
 
-.equipped-petal-slot {
+.petal-slot {
     position: relative;
-    z-index: -1;
     border-style: solid;
     border-width: 4px;
     border-radius: 5px;
@@ -242,4 +263,8 @@ body {
     color: white;
     top: 80%;
     left: 50%;
+}
+
+img {
+    pointer-events: none;
 }
